Features/customerPortal/force-app/main/default/objects/Customer_Portal_Request__c/Customer_Portal_Request__c.object-meta.xml
<CustomObject>
    <description>Customer portal requests, actions, messages, POD uploads, disputes and document requests.</description>
    <label>Customer Portal Request</label>
    <nameField>
        <displayFormat>CPR-{000000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Portal Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>