Features/customerPortal/force-app/main/default/objects/Customer_Portal_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account</relationshipLabel>
    <relationshipName>Account_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>