Features/customerPortal/force-app/main/default/objects/Customer_Portal_Request__c/fields/Content_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Version_Id__c</fullName>
    <label>Content Version Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>