Features/customerPortal/force-app/main/default/objects/Customer_Portal_Request__c/fields/Load__c.field-meta.xml
<CustomField>
    <fullName>Load__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Load</label>
    <referenceTo>FreightTM__Load__c</referenceTo>
    <relationshipLabel>Load</relationshipLabel>
    <relationshipName>Load_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>