Features/customerPortal/force-app/main/default/objects/Customer_Portal_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APPROVE_QUOTE</fullName>
            </value>
            <value>
                <fullName>REJECT_QUOTE</fullName>
            </value>
            <value>
                <fullName>CONFIRM_DELIVERY</fullName>
            </value>
            <value>
                <fullName>DISPUTE_INVOICE</fullName>
            </value>
            <value>
                <fullName>REQUEST_DOCUMENT</fullName>
            </value>
            <value>
                <fullName>MESSAGE_OPERATIONS</fullName>
                <default>true</default>
                <label>MESSAGE_OPERATIONS</label>
            </value>
            <value>
                <fullName>POD_UPLOADED</fullName>
            </value>
            <value>
                <fullName>DOCUMENT_VIEWED</fullName>
            </value>
            <value>
                <fullName>PORTAL_OPENED</fullName>
            </value>
            <value>
                <fullName>STATUS_UPDATED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>