Features/customerPortal/force-app/main/default/objects/Customer_Portal_Request__c/fields/Requester_Email__c.field-meta.xml
<CustomField>
    <fullName>Requester_Email__c</fullName>
    <label>Requester Email</label>
    <type>Email</type>
</CustomField>