Features/customerPortal/force-app/main/default/objects/Customer_Portal_Request__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Token</fullName>
                <default>true</default>
                <label>Token</label>
            </value>
            <value>
                <fullName>Login</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>